# cp-moe-research

./: .gitignore  README.md  pyproject.toml
configs/: smoke_tiny.yaml  superni_cpmoe_order1.yaml  superni_llama2_7b_kaggle_order1.yaml  superni_mini_tiny.yaml  superni_mistral7b_order1.yaml
docs/: colab_plan.md  step_01_reproduction_strategy.md
scripts/: prepare_superni.py  train_continual.py
src/cpmoe/: __init__.py  benchmark.py  config.py  data.py  modeling.py  train_utils.py  transient.py
